RESOLVED FIXED 262043
WTF::Vector should use ASSERT_WITH_SECURITY_IMPLICATION() for buffer/capacity/size checks
https://bugs.webkit.org/show_bug.cgi?id=262043
Summary WTF::Vector should use ASSERT_WITH_SECURITY_IMPLICATION() for buffer/capacity...
David Kilzer (:ddkilzer)
Reported 2023-09-25 08:20:58 PDT
WTF::Vector should use ASSERT_WITH_SECURITY_IMPLICATION() for buffer/capacity/size checks.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-25 08:21:16 PDT
David Kilzer (:ddkilzer)
Comment 2 2023-09-25 08:37:14 PDT
EWS
Comment 3 2023-09-25 10:10:47 PDT
Committed 268399@main (59e4fcd22360): <https://commits.webkit.org/268399@main> Reviewed commits have been landed. Closing PR #18164 and removing active labels.
David Kilzer (:ddkilzer)
Comment 4 2023-09-26 08:44:34 PDT
EWS
Comment 5 2023-09-26 09:18:02 PDT
Committed 268456@main (a33479953fa2): <https://commits.webkit.org/268456@main> Reviewed commits have been landed. Closing PR #18229 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.