Follow-up: WTF::Vector should use ASSERT_WITH_SECURITY_IMPLICATION() for buffer/capacity/size checks https://bugs.webkit.org/show_bug.cgi?id=262043 <rdar://115993707>

Unreviewed build fix.

* Source/WTF/wtf/Assertions.h:
(NO_RETURN_DUE_TO_ASSERT_WITH_SECURITY_IMPLICATION): Add.

* Source/WTF/wtf/Vector.h:
(WTF::UnsafeVectorOverflow::overflowed):
- Switch from NO_RETURN_DUE_TO_ASSERT to
  NO_RETURN_DUE_TO_ASSERT_WITH_SECURITY_IMPLICATION to fix the build.

Canonical link: https://commits.webkit.org/268456@main